# ups-mcp

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  live_test.py  pyproject.toml
.claude/: gsd-file-manifest.json  settings.json
docs/plans/: 2026-02-13-create-shipment-elicitation-v1-impl.md  2026-02-13-create-shipment-elicitation-v1.md  2026-02-15-logistics-expansion-design.md  2026-02-15-logistics-expansion-impl.md  2026-02-19-elicitation-hardening-design.md  2026-02-19-elicitation-hardening-impl.md
tests/: rating_fixtures.py  shipment_fixtures.py  test_authorization.py  test_elicitation.py  test_http_client.py  test_landed_cost_tools.py  test_legacy_tools.py  test_locator_tools.py  test_openapi_registry.py  test_package_data.py  test_paperless_tools.py  test_pickup_tools.py  test_rating_validator.py  test_server_config.py  test_server_elicitation.py  test_server_new_tools.py  test_server_rate_elicitation.py  test_server_tools.py  test_shipment_validator.py  test_tool_mapping.py
ups_mcp/: authorization.py  constants.py  elicitation.py  http_client.py  openapi_registry.py  rating_validator.py  server.py  shipment_validator.py  tools.py
ups_mcp/specs/: LandedCost.yaml  Locator.yaml  Pickup.yaml
